# examen-dvc

./: .gitignore  README.md  dvc.yaml  pyproject.toml
.dvc/: config
metrics/: scores.json
models/: best_params.pkl.dvc  scaler.pkl.dvc  trained_model.joblib.dvc
notebooks/: 1.0-initial-data-exploration.ipynb
src/data/: import_raw_data.py  make_dataset.py
src/deep/: evaluate_model.py  train_model.py
src/models/: evaluate_model.py  model_definition.py  predict_model.py  train_model.py
